se añadieron nuevos endpoints
